--- a/movie_visualisasi.ipynb
+++ b/movie_visualisasi.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "movie_visualisasi.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO2e6TGsH7HFUwwZeBLAZCP",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPQ9rKRs9nXhNJVNYNoM07w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +49,7 @@
       "metadata": {
         "id": "ptcfTNvE9Z8T"
       },
-      "execution_count": 2,
+      "execution_count": 63,
       "outputs": []
     },
     {
@@ -56,24 +57,24 @@
       "source": [
         "# read csv\n",
         "df = pd.read_csv(\"/content/Highest Holywood Grossing Movies.csv\")\n",
-        "df"
+        "df.head()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 441
         },
         "id": "D7APtDna9wNF",
-        "outputId": "12814b9d-4466-4a4e-a41b-5eb00ff7a430"
+        "outputId": "4868889c-428e-4020-aa51-e7884d69bb59"
       },
-      "execution_count": 3,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-da36a2ad-3396-48b1-8954-93fc87ad6457\">\n",
+              "  <div id=\"df-b982cc98-1a8d-4772-878d-2ea573ca8f03\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -177,95 +178,10 @@
               "      <td>2 hr 29 min</td>\n",
               "      <td>NaN</td>\n",
               "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>913</th>\n",
-              "      <td>913</td>\n",
-              "      <td>The Notebook (2004)</td>\n",
-              "      <td>A poor yet passionate young man falls in love ...</td>\n",
-              "      <td>New Line Cinema</td>\n",
-              "      <td>June 25, 2004</td>\n",
-              "      <td>81001787</td>\n",
-              "      <td>36813370</td>\n",
-              "      <td>117815157</td>\n",
-              "      <td>['Drama', 'Romance']</td>\n",
-              "      <td>2 hr 3 min</td>\n",
-              "      <td>PG-13</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>914</th>\n",
-              "      <td>914</td>\n",
-              "      <td>Jimmy Neutron: Boy Genius (2001)</td>\n",
-              "      <td>An eight-year-old boy genius and his friends m...</td>\n",
-              "      <td>Paramount Pictures</td>\n",
-              "      <td>December 21, 2001</td>\n",
-              "      <td>80936232</td>\n",
-              "      <td>22056304</td>\n",
-              "      <td>102992536</td>\n",
-              "      <td>['Action', 'Adventure', 'Animation', 'Comedy',...</td>\n",
-              "      <td>1 hr 22 min</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>915</th>\n",
-              "      <td>915</td>\n",
-              "      <td>Eat Pray Love (2010)</td>\n",
-              "      <td>A married woman realizes how unhappy her marri...</td>\n",
-              "      <td>Sony Pictures Entertainment (SPE)</td>\n",
-              "      <td>August 13, 2010</td>\n",
-              "      <td>80574010</td>\n",
-              "      <td>124020006</td>\n",
-              "      <td>204594016</td>\n",
-              "      <td>['Biography', 'Drama', 'Romance']</td>\n",
-              "      <td>2 hr 13 min</td>\n",
-              "      <td>PG-13</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>916</th>\n",
-              "      <td>916</td>\n",
-              "      <td>The Texas Chainsaw Massacre (2003)</td>\n",
-              "      <td>After picking up a traumatized young hitchhike...</td>\n",
-              "      <td>New Line Cinema</td>\n",
-              "      <td>October 17, 2003</td>\n",
-              "      <td>80571655</td>\n",
-              "      <td>26792250</td>\n",
-              "      <td>107363905</td>\n",
-              "      <td>['Crime', 'Horror']</td>\n",
-              "      <td>1 hr 38 min</td>\n",
-              "      <td>R</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>917</th>\n",
-              "      <td>917</td>\n",
-              "      <td>Zookeeper (2011)</td>\n",
-              "      <td>A group of zoo animals decide to break their c...</td>\n",
-              "      <td>Sony Pictures Entertainment (SPE)</td>\n",
-              "      <td>July 6, 2011</td>\n",
-              "      <td>80360843</td>\n",
-              "      <td>89491916</td>\n",
-              "      <td>169852759</td>\n",
-              "      <td>['Comedy', 'Family', 'Fantasy', 'Romance']</td>\n",
-              "      <td>1 hr 42 min</td>\n",
-              "      <td>PG</td>\n",
-              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>918 rows × 11 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-da36a2ad-3396-48b1-8954-93fc87ad6457')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b982cc98-1a8d-4772-878d-2ea573ca8f03')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -316,12 +232,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-da36a2ad-3396-48b1-8954-93fc87ad6457 button.colab-df-convert');\n",
+              "          document.querySelector('#df-b982cc98-1a8d-4772-878d-2ea573ca8f03 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-da36a2ad-3396-48b1-8954-93fc87ad6457');\n",
+              "          const element = document.querySelector('#df-b982cc98-1a8d-4772-878d-2ea573ca8f03');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -343,37 +259,229 @@
               "  "
             ],
             "text/plain": [
-              "     Unnamed: 0  ... License\n",
-              "0             0  ...   PG-13\n",
-              "1             1  ...   PG-13\n",
-              "2             2  ...   PG-13\n",
-              "3             3  ...     NaN\n",
-              "4             4  ...     NaN\n",
-              "..          ...  ...     ...\n",
-              "913         913  ...   PG-13\n",
-              "914         914  ...     NaN\n",
-              "915         915  ...   PG-13\n",
-              "916         916  ...       R\n",
-              "917         917  ...      PG\n",
+              "   Unnamed: 0  ... License\n",
+              "0           0  ...   PG-13\n",
+              "1           1  ...   PG-13\n",
+              "2           2  ...   PG-13\n",
+              "3           3  ...     NaN\n",
+              "4           4  ...     NaN\n",
               "\n",
-              "[918 rows x 11 columns]"
+              "[5 rows x 11 columns]"
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 70
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "df.dtypes"
       ],
       "metadata": {
-        "id": "OawTMM1m989E"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OawTMM1m989E",
+        "outputId": "662fde7f-77a1-4dc3-c7ee-8099d08fbd0f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Unnamed: 0                     int64\n",
+              "Title                         object\n",
+              "Movie Info                    object\n",
+              "Distributor                   object\n",
+              "Release Date                  object\n",
+              "Domestic Sales (in $)          int64\n",
+              "International Sales (in $)     int64\n",
+              "World Sales (in $)             int64\n",
+              "Genre                         object\n",
+              "Movie Runtime                 object\n",
+              "License                       object\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GPYuiYQS_EOI",
+        "outputId": "988f587f-abc0-4ef7-af69-c957240749c4"
+      },
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 918 entries, 0 to 917\n",
+            "Data columns (total 11 columns):\n",
+            " #   Column                      Non-Null Count  Dtype \n",
+            "---  ------                      --------------  ----- \n",
+            " 0   Unnamed: 0                  918 non-null    int64 \n",
+            " 1   Title                       918 non-null    object\n",
+            " 2   Movie Info                  918 non-null    object\n",
+            " 3   Distributor                 918 non-null    object\n",
+            " 4   Release Date                800 non-null    object\n",
+            " 5   Domestic Sales (in $)       918 non-null    int64 \n",
+            " 6   International Sales (in $)  918 non-null    int64 \n",
+            " 7   World Sales (in $)          918 non-null    int64 \n",
+            " 8   Genre                       918 non-null    object\n",
+            " 9   Movie Runtime               918 non-null    object\n",
+            " 10  License                     744 non-null    object\n",
+            "dtypes: int64(4), object(7)\n",
+            "memory usage: 79.0+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# rename kolom\n",
+        "df.rename({\n",
+        "    'Movie Info' : 'Movie_Info',\n",
+        "    'Release Date' : 'Release_Date',\n",
+        "    'Domestic Sales (in $)' : 'Domestic_Sales',\n",
+        "    'International Sales (in $)' : 'International_Sales',\n",
+        "    'World Sales (in $)' : 'World_Sales',\n",
+        "    'Movie Runtime' : 'Movie_Runtime'\n",
+        "},axis=1, inplace=True)\n",
+        "df.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NUNvlRdFDO3x",
+        "outputId": "54160067-bd41-4ece-95e2-f9ce2b56f552"
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 918 entries, 0 to 917\n",
+            "Data columns (total 11 columns):\n",
+            " #   Column               Non-Null Count  Dtype \n",
+            "---  ------               --------------  ----- \n",
+            " 0   Unnamed: 0           918 non-null    int64 \n",
+            " 1   Title                918 non-null    object\n",
+            " 2   Movie_Info           918 non-null    object\n",
+            " 3   Distributor          918 non-null    object\n",
+            " 4   Release_Date         800 non-null    object\n",
+            " 5   Domestic_Sales       918 non-null    int64 \n",
+            " 6   International_Sales  918 non-null    int64 \n",
+            " 7   World_Sales          918 non-null    int64 \n",
+            " 8   Genre                918 non-null    object\n",
+            " 9   Movie_Runtime        918 non-null    object\n",
+            " 10  License              744 non-null    object\n",
+            "dtypes: int64(4), object(7)\n",
+            "memory usage: 79.0+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# mengecek apakah data ada yang null value\n",
+        "df.isnull().sum()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kGEzZM7sEwI_",
+        "outputId": "2e9fff17-2188-4545-d750-f3c790ca6f05"
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Unnamed: 0               0\n",
+              "Title                    0\n",
+              "Movie_Info               0\n",
+              "Distributor              0\n",
+              "Release_Date           118\n",
+              "Domestic_Sales           0\n",
+              "International_Sales      0\n",
+              "World_Sales              0\n",
+              "Genre                    0\n",
+              "Movie_Runtime            0\n",
+              "License                174\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 68
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# memghapus kolom => Unnamed: 0 \n",
+        "df.drop('Unnamed: 0', axis=1, inplace=True)\n",
+        "\n",
+        "# menghapus kolom Release_Date \n",
+        "df.drop('Release_Date', axis=1, inplace=True)\n",
+        "\n",
+        "# mengisi missing value pada kolom License dengan menggunakan modus\n",
+        "modus = df['License'].mode()[0]\n",
+        "df['License'] = df['License'].fillna(modus)\n",
+        "\n",
+        "df.isnull().sum()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eXDNSklMFVH2",
+        "outputId": "e56313ca-7752-48d0-c70e-94a898b5967f"
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Title                  0\n",
+              "Movie_Info             0\n",
+              "Distributor            0\n",
+              "Domestic_Sales         0\n",
+              "International_Sales    0\n",
+              "World_Sales            0\n",
+              "Genre                  0\n",
+              "Movie_Runtime          0\n",
+              "License                0\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 69
+        }
+      ]
     }
   ]
 }
